# vending-machine-app

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
code/: CMakeLists.txt  VendingMachine.cpp  VendingMachine.h  utils.h
include/: CMakeLists.txt  catch.hpp  test.cpp
tests/: test1.cpp  test2.cpp  test3.cpp  test4.cpp
